Fixes demo layout issue

--- a/scss/_demo.scss
+++ b/scss/_demo.scss
@@ -1,5 +1,7 @@
 body, html {
     height: 100vh;
+    padding: 0;
+    margin: 0;
 }
 
 body {
